Set up the classes, refactoring variables & methods
Still a long way to go...

--- a/PlatformIO/platformio.ini
+++ b/PlatformIO/platformio.ini
@@ -13,6 +13,11 @@ platform = espressif8266
 board = d1_mini
 framework = arduino
 monitor_speed = 115200
+
+build_flags = 
+    -I include
+    -I src
+
 lib_deps =
     WiFiManager
     MQTT
